better support for -XX:+PrintGCApplicationStoppedTime
- also parse events without timestamps (pre jdk1.7.0_u50)
- GCModel.totalPause() includes VmOperationEvents pauses
- GCModel.runningTime() includes last pause -> throughput changes slightly
- GCRectanglesRenderer renders VmOperationEvents
- GCRectanglesRenderer draws different colours for different STW events